--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -58,6 +58,7 @@ p.update(time);
 I added controls using [TweakPane](https://cocopon.github.io/tweakpane/), a great js lib for controls à la datgui/imgui. Then it's just a matter of filling an HTML Canvas using rust code - more on that in the [Wasm interop optimization section](#todays-rabbit-hole--wasm-interop-optimization)
 
 # Plasma effect
+
 <Run data-sample="Plasma" />
 The plasma effect is typical of demo effects: trivial to do today with a GPU, impressive when it was written on a CPU, often without a floating point unit. Look at this Amstrad demo:
 
@@ -70,7 +71,7 @@ Let's start with simple concentric circles and a grey scale palette. The palette
 
 ```rust
 
-fn col32(r: u8, g: u8, b: u8) -> u32 {
+fn col32((r,g,b):(u8,u8,u8)) -> u32 {
     255 << 24 | (b as u32) << 16 | (g as u32) << 8 | (r as u32)
 }
 
@@ -78,15 +79,13 @@ const PALETTE_SIZE: usize = 256;
 let mut palette: Vec<u32> = vec![0; PALETTE_SIZE];
 
 for i in 0..PALETTE_SIZE {
-    let f = i as f32 / PALETTE_SIZE as f32;
-
     // color_sys crate
-    let c = rgb(i as u8, i as u8, i as u8);
+    let c = col32((i as u8, i as u8, i as u8));
     palette[i] = c;
 }
 ```
 
-Next
+The concentric circles are made by piping the distance to the center in a sine :
 
 ```rust
 for y in 0..self.h {
@@ -97,9 +96,14 @@ for y in 0..self.h {
 
         // palette index
         let v = (
+            // distance from the current point to the center
             vec2(fx - 0.5, fy - 0.5)
+            // scaled to get multiple bands
             * 16.0
-        ).length().sin();
+        )
+        .length()
+        // make it oscillate
+        .sin();
 
         // buffer index
         let i = y * self.w + x;
@@ -113,71 +117,123 @@ for y in 0..self.h {
 }
 ```
 
+And that's all. The result, with the palette drawn below :
 
 <Run data-sample="Plasma" data-static="true" data-step="FixedCircle" data-palette="Greyscale" data-disablepane="true"/>
-<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="Greyscale" />
-<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="GreyscaleLooped"/>
-<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="Colors"/>
-<Run data-sample="Plasma" data-step="Perturbation" data-palette="Colors"/>
-<Run data-sample="Plasma" data-palette="ColorsStepped"/>
 
+It's now time to animate the effect, first by shifting the palette, which is just a matter of offsetting the palette index with the time in seconds. I'll do it before remapping the [-1,1] value to [0,255] :
 
 ```rust
-#[wasm_bindgen]
-pub struct Plasma {
-    w: usize,
-    h: usize,
-    palette: Vec<u32>,
-}
+remap(
+    (vec2(fx - 0.5, fy - 0.5) * 16.0).length().sin()
+     + time , // shift
+    -1.0..=1.0,
+    0.0..=255.0,
+) as usize
+% 256
+```
 
-#[wasm_bindgen]
-impl Plasma {
-    #[wasm_bindgen(constructor)]
-    pub fn new(w: usize, h: usize) -> Self {
-        let mut palette: Vec<u32> = vec![0; 256];
-        for i in 0..palette.len() {
-            let f = i as f32 / palette.len() as f32;
-            let c = Rgb::from(Hsl::from((
-                lerp(203.0..=31.0, f),
-                82.0,
-                ((f+0.5).powi(2)*100.0).clamp(10.0, 60.0)
-            )));
-            palette[i] = col32(
-                c.red().min(255.0) as u8,
-                c.green().min(255.0) as u8,
-                c.blue().min(255.0) as u8,
-            );
-        }
+<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="Greyscale" />
 
-        Self { w, h, palette }
-    }
+Doing it this way means we'll cycle around the palette, which shows that the palette is not continuous. Let's loop the palette:
 
-    pub fn update(&mut self, b: &mut [u32], time: f32) {
-
-        let a = vec2(self.w as f32 / self.h as f32, 1.0);
-        for y in 0..self.h {
-            for x in 0..self.w {
-                let fx = x as f32 / self.w as f32;
-                let fy = y as f32 / self.h as f32;
-
-                let c = vec2(fx, fy) * a * 8.0 + vec2(time * 0.3,time * 0.3);
-                let k = 0.1 + (c.y + (0.148 - time).sin()).cos() + 2.4 * time;
-                let w = 0.9 + (c.x + (0.628 + time).cos()).sin() - 0.7 * time;
-                let d = c.length();
-                let s = 7.0 * (d+w).cos() * (k+w).sin();
-                let i = y * self.w + x;
-                let cv = s + vec3(0.2, 0.5, 0.9);
-                b[i] = col32f(cv.x,cv.y, cv.z);
-                let c = self.palette[((s.cos() * 0.5 + 0.5) * 255.0) as usize % 256];
-                b[i] = c;
-            }
-        }
-    }
+```rust
+for i in 0..PALETTE_SIZE {
+    // go from 0 to 1 to 0 over the palette range
+    let c = if i < PALETTE_SIZE / 2 {
+        i as i32 * 2
+    } else {
+        PALETTE_SIZE as i32 - ((i - PALETTE_SIZE / 2) as i32 * 2)
+    };
+    col32(Rgb::from((c, c, c)).into())
 }
 ```
 
+<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="GreyscaleLooped"/>
 
-The real bottleneck, however, is the massive amount of `sin/cos` calls. I tried to implement a precomputed look-up table for the trigonometry as [we used to](https://namoseley.wordpress.com/2015/07/26/sincos-generation-using-table-lookup-and-iterpolation/) but Rust's own trig is still twice as fast. Maybe I'll investigate, there's a potential article here...
+That's better. Time for a better palette:
+
+```rust
+for i in 0..PALETTE_SIZE {
+    let f = i as f32 / PALETTE_SIZE as f32;
+    let ff = if i < PALETTE_SIZE / 2 {
+        f * 2.0
+    } else {
+        1.0 - ((f - 0.5) * 2.0)
+    };
+
+    col32(Rgb::from(Hsl::from((
+        // lerp the hue from blue to green-yellow
+        lerp(203.0..=31.0, ff / 2.0),
+        82.0,
+        // lerp the lightness
+        ((ff / 2.0 + 0.5).powi(2) * 100.0).clamp(10.0, 100.0),
+    ))).into())
+}
+```
+<Run data-sample="Plasma" data-step="ShiftedCircle" data-palette="Colors"/>
+
+Now let's animate the circle center too :
+```rust
+remap(
+    (vec2(
+        fx - 0.25 - time.sin() * 0.2,
+        fy - 0.3 - time.cos() * 0.3
+    ) * 16.0).length().sin()
+    + time,
+    -1.0..=1.0,
+    0.0..=255.0,
+) as usize
+    % 256
+```
+<Run data-sample="Plasma" data-step="Perturbation" data-palette="Colors"/>
+
+We now have everything we need: a rendering function akin to a [SDF](https://en.wikipedia.org/wiki/Signed_distance_function), animated, and palette shifting. It just needs an interesting rendering function. I'll use the [bracket-noise crate](https://docs.rs/crate/bracket-noise/latest) :
+
+
+```rust
+let w = noise.get_noise(
+    // warp the noise domain
+    fx * 3.0 + (time / 3.0).sin(),
+    fy + (time / 7.0).cos().powi(2));
+remap(
+    // feed the noise to itself
+    noise.get_noise(
+        fx + w + time.cos(),
+        fy + w.powi(3) + (time/1.7).sin())
+    // palette shifting
+    + time * (fx * fy + 0.1) / 6.0,
+    0.0..=0.7,
+    0.0..=255.0,
+) as usize
+    % 256
+```
+
+<Run data-sample="Plasma" />
+
+Optionally, the palette could be stepped into non-continuous colors:
+
+```rust
+for i in 0..PALETTE_SIZE {
+    let f = i as f32 / PALETTE_SIZE as f32;
+    let ff = if i < PALETTE_SIZE / 2 {
+        f * 2.0
+    } else {
+        1.0 - ((f - 0.5) * 2.0)
+    };
+    // stepping : 
+    let stepped = (ff * 4.0).round() / (4.0);
+    col32(Rgb::from(Hsl::from((
+        lerp(203.0..=31.0, stepped / 2.0),
+        82.0,
+        ((stepped / 2.0 + 0.5).powi(2) * 100.0).clamp(10.0, 100.0),
+    ))).into())
+}
+```
+<Run data-sample="Plasma" data-palette="ColorsStepped"/>
+
+
+The real bottleneck, is the massive amount of `sin/cos` calls. I tried to implement a precomputed look-up table for the trigonometry as [we used to](https://namoseley.wordpress.com/2015/07/26/sincos-generation-using-table-lookup-and-iterpolation/) but Rust's own trig is still twice as fast. Maybe I'll investigate, there's a potential article here...
 
 # Fire effect
 
