--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -4,12 +4,14 @@ author: "theor"
 type: "post"
 pubDate: 2023-04-15T15:43:14.015Z
 description: ""
-banner: ""
+banner: "_banner.webm"
 tags: []
 setup: |
   console.log("qwe")
 ---
 import Run from "./_Run.astro"
+
+<Video src={import("./_banner.webm")} />
 
 I needed a reason to play with rust+wasm, and I have always loved the [demoscene](http://demoscene-the-art-of-coding.net/the-demoscene/) and its cleverness. I also wanted the result to be embeddable here on my blog made with Astro. Guess who's about to fill buffers with fire, plasma, stars and roads.
 
