--- a/src/content/blog/lorem-ipsum/index.mdx
+++ b/src/content/blog/lorem-ipsum/index.mdx
@@ -5,7 +5,7 @@ type: "post"
 pubDate: 2023-04-15T15:43:14.015Z
 description: ""
 banner: "_banner.webm"
-tags: []
+tags: ["rust", "wasm", "demoscene"]
 setup: |
   console.log("qwe")
 ---
