--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -239,7 +239,7 @@ The real bottleneck, is the massive amount of `sin/cos` calls. I tried to implem
 
 # Fire effect
 
-<Run id="asd3" data-sample="firestate" data-message="wwwww"/>
+<Run id="asd3" data-sample="firestate" data-message="wwwww" title="Move the pointer over the canvas"/>
 
 
 
