move tree as external bitmap

--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -257,6 +257,8 @@ Instead of simple points, I draw lines to give a feeling of speed, and make that
 
 <Run data-sample="Roads"/>
 
+Credit: background from [Panda](https://pixeljoint.com/pixelart/39681.htm), tree from the original Outrun game
+
 [Lou's pseudo 3d page](http://www.extentofthejam.com/pseudo/)
 
 # Today's rabbit hole : Wasm interop optimization
