--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -6,9 +6,8 @@ pubDate: 2023-04-15T15:43:14.015Z
 description: ""
 banner: "_banner.webm"
 tags: ["rust", "wasm", "demoscene"]
-setup: |
-  console.log("qwe")
 ---
+import Video from '../../../components/Video.astro';
 import Run from "./_Run.astro"
 
 <Video src={import("./_banner.webm")} />
