--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -6,6 +6,7 @@ pubDate: 2023-04-15T15:43:14.015Z
 description: ""
 banner: "_banner.webm"
 tags: ["rust", "wasm", "demoscene"]
+draft: true
 ---
 import Video from '../../../components/Video.astro';
 import Run from "./_Run.astro"
