--- a/src/content/blog/doom-maps-laser-cut/index.mdx
+++ b/src/content/blog/doom-maps-laser-cut/index.mdx
@@ -141,12 +141,12 @@ for i in 0..sectors.len() {
 It is similar to using a pseudorandom generator with a fixed seed, but the Halton sequence is more evenly distributed. Here is the result for 100 values with a few base/f combinations :
 
 <div class="gallery">
-<Figure caption="base = 11 , f = 1" src={halton1} />
-<Figure caption="base = 17 , f = 1" src={halton2} />
-<Figure caption="base = 23 , f = 1" src={halton3} />
-<Figure caption="base = 11 , f = 1.5" src={halton4} />
-<Figure caption="base = 17 , f = 1.5" src={halton5} />
-<Figure caption="base = 23 , f = 1.5" src={halton6} />
+<Figure width="200" caption="base = 11 , f = 1" src={halton1} />
+<Figure width="200" caption="base = 17 , f = 1" src={halton2} />
+<Figure width="200" caption="base = 23 , f = 1" src={halton3} />
+<Figure width="200" caption="base = 11 , f = 1.5" src={halton4} />
+<Figure width="200" caption="base = 17 , f = 1.5" src={halton5} />
+<Figure width="200" caption="base = 23 , f = 1.5" src={halton6} />
 </div>
 
 # Today's rabbit hole: 3D rendering and triangulation
