--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -6,7 +6,6 @@ pubDate: 2023-04-15T15:43:14.015Z
 description: ""
 banner: "_banner.webm"
 tags: ["rust", "wasm", "demoscene"]
-draft: true
 ---
 import Video from '../../../components/Video.astro';
 import Run from "./_Run.astro"
@@ -388,4 +387,4 @@ canvasContext.putImageData(data.buffer, 0, 0);
 
 # Conclusion
 
-There's much more to do (benchmark wasm-compiled trigonometry functions, compile rust in no-std mode to reduce even more the binary size, ...) but that's all for now. Maybe I'll write on my experiment plugging the [GNU-Rocket sync tracker](https://github.com/rocket/rocket) in there, and this article is a good prelude to my fascination with [fantasy consoles](https://github.com/paladin-t/fantasy), but I'll stop here for now!
+There's much more to do (benchmark wasm-compiled trigonometry functions, compile rust in no-std mode to reduce even more the binary size, ...) but that's all for now. Maybe I'll write on my experiment plugging the [GNU-Rocket sync tracker](https://github.com/rocket/rocket) in there, and this article is a good prelude to my fascination with [fantasy consoles](https://github.com/paladin-t/fantasy), but I'll stop here for now! The code is available here: https://github.com/theor/rust-demoeffects/tree/main/sample/sample-rust/src
