lots of config to get a proper preview

--- a/src/content/blog/rust-wasm-demo-effects/index.mdx
+++ b/src/content/blog/rust-wasm-demo-effects/index.mdx
@@ -5,14 +5,16 @@ type: "post"
 pubDate: 2023-04-15T15:43:14.015Z
 description: ""
 banner: "_banner.webm"
+staticBanner: "_banner.webp"
 tags: ["rust", "wasm", "demoscene"]
 ---
 import Video from '../../../components/Video.astro';
 import Run from "./_Run.astro"
 
-<Video src={import("./_banner.webm")} />
 
 I needed a reason to play with rust+wasm, and I have always loved the [demoscene](http://demoscene-the-art-of-coding.net/the-demoscene/) and its cleverness. I also wanted the result to be embeddable here on my blog made with Astro. Guess who's about to fill buffers with fire, plasma, stars and roads.
+
+<Video src={import("./_banner.webm")}/>
 
 # Rust, Wasm bootstrap
 
